--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Aaron Apple, Cognitive Scientist
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Aaron Apple, Cognitive Scientist</h1>
+	<p>Cognitive scientist, interested in human development and learning. Passionate about education, policy and dissemination.</p>
 </div><!-- /.blurb -->
