--- a/index.html
+++ b/index.html
@@ -1,8 +1,301 @@
----
-layout: default
-title: Aaron Apple, Cognitive Scientist
----
-<div class="blurb">
-	<h1>Aaron Apple, Cognitive Scientist</h1>
-	<p>Cognitive scientist, interested in human development and learning. Passionate about education, policy and dissemination.</p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html>
+<head>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <title>Aaron Apple</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />`
+
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="">
+
+  <!-- ADD CSS -->
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Fonts from Font Awsome -->
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <!-- Magnific popup -->
+  <link rel="stylesheet" href="css/magnific-popup.css">
+  <!-- Vegas slider -->
+  <link rel="stylesheet" href="css/vegas.min.css">
+
+  <!-- Color styles -->
+  <link rel="stylesheet" href="css/colors/better-color.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/morphext.css">
+
+  <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="css/main.css">
+
+  <!-- Feature detection -->
+  <!-- <script src="js/modernizr-2.6.2.min.js"></script> -->
+
+  <!-- Fonts -->
+  <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'> -->
+
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+
+  <link href='http://fonts.googleapis.com/css?family=Alice:400,700' rel='stylesheet' type='text/css'>
+
+</head>
+
+<body>
+  <div class="navbar navbar-default navbar-static-top" role="navigation">
+    <div class="container">
+      <div class="navbar-brand">
+        <p class="nav navbar-nav" id="main-menu">Aaron Apple<p/>
+        </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul style="float:right" class="nav navbar-nav" id="main-menu">
+            <li><a href="#page-welcome">Home</a>
+            </li>
+            <li><a href="#page-profile">Bio</a>
+            </li>
+            <li><a href="#page-education">Education</a>
+            </li>
+          </li>
+          <!-- <li><a href="#page-skills">Skills</a>
+          </li> -->
+          <li><a href="#page-portfolio">Portfolio</a>
+          </li>
+          <li><a href="#page-contact">Contact</a>
+          </li>
+          <li><a href="img/apple_CV.pdf">CV</a>
+          </li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </div>
+  <!-- welcome begins -->
+  <section id="page-welcome" class="page-welcome">
+    <div class="container">
+      <div class="row">
+        <header>
+          <h1>Some thoughts:</h1>
+          <span style="font-size:80px" class="element"></span>
+        </header>
+        <div class="social-icons">
+          <a href="img/apple_CV.pdf" class="btn btn-round btn-clear btn-google" id="resumeBtn"><i class="fa fa fa-file-text-o"></i></a>
+          <a href="https://www.linkedin.com/in/aaron-apple-08814925" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+          <a href="https://www.facebook.com/aaron.apple1" target="_blank" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+          <!-- <a href="https://github.com/aaronapple/" target="_blank" class="btn btn-round btn-clear btn-github"><i class="fa fa-github"></i></a> -->
+        </div>
+        <!-- <a href="#page-profile" class="btn btn-default hire-me">Bio</a> -->
+      </div>
+    </div>
+  </section>
+  <!-- welcome ends -->
+  <!-- profile begins -->
+  <section id="page-profile" class="page-profile">
+    <div class="container">
+      <header class="section-header">
+        <h2 class="section-title">Hello</h2>
+        <div class="spacer"></div>
+        <p class="section-subtitle">I'm a cognitive scientist with expertise in human development and language learning, looking to apply my analytical skills to improve education policy.</p>
+      </header>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="profile"><img src="img/profile.jpg" alt="profile" />
+          </div>
+        </div>
+        <div style="font-size:16px" class="col-md-9">
+          <p>I was born in a northern suburb of Chicago. A recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- profile ends -->
+  <!-- education begins -->
+  <section id="page-education" class="page-education">
+    <div class="container">
+      <header class="section-header">
+        <h2 class="section-title"><span>Education</span></h2>
+        <div class="spacer"></div>
+        <p class="section-subtitle"> </p>
+      </header>
+          <article class="education">
+            <center>
+              <h3>Johns Hopkins University</h3>
+              <p><strong>M.A. in Cognitive Science</strong></p>
+              <p>Graduated: July 2016</p>
+              <p>My graduate research focused on how language processing behaviors (such as reading, understanding, and producing language) are influenced by experience, over the course of a few milliseconds or over many years. Anything else fun to say?</p>
+            </center>
+          </article>
+          <p class="section-subtitle"></p>
+          <article class="education">
+            <center>
+              <h3>New York University</h3>
+              <p><strong>B.A. in Language and Mind</strong></p>
+              <p>Graduated: December 2012</p>
+              <p>I graduated with a bachelor's degree in Language and Mind.....</p>
+            </center>
+          </article>
+        </div>
+    </div>
+  </section>
+
+<!-- <section id="page-skills" class="page-skills">
+  <div class="container">
+    <header class="section-header">
+      <h2 class="section-title"><span>Skills</span></h2>
+      <div class="spacer"></div>
+    </header>
+    <div id="myDiv" ><img  width="90%" src="img/wordle.png" alt=""></div>
+  </section>
+  <!-- skills ends -->
+
+  <!-- portfolio begins -->
+  <section id="page-portfolio" class="page-portfolio">
+    <div class="container">
+      <div class="row">
+        <header class="section-header">
+          <h2 class="section-title"><span>Portfolio</span></h2>
+          <div class="spacer"></div>
+          <p class="section-subtitle"> </p>
+        </header>
+
+        <div id="grid-controls-wrapper">
+          <ul class="nav nav-pills center-pills grid-controls">
+            <li class="active filter"><a href="javascript:void(0)" data-filter="*">All</a>
+            </li>
+            <li class="filter"><a href="javascript:void(0)" data-filter=".science">Science</a>
+            </li>
+          <!--  <li class="filter"><a href="javascript:void(0)" data-filter=".webdesign">Web Design</a>
+            </li>
+            <li class="filter"><a href="javascript:void(0)" data-filter=".webapps">Web Apps</a>
+            </li>
+            <li class="filter"><a href="javascript:void(0)" data-filter=".music">Music</a>
+            </li> -->
+          </ul>
+        </div>
+
+        <div>
+          <ul id="grid" class="grid-wrapper">
+            <li class="mix science">
+              <a href="http://journal.frontiersin.org/article/10.3389/fpsyg.2015.00384/full" target="_blank">
+                <div class="overlay"><i class="fa fa-search"></i>
+                </div><img src="img/portfolio/small/frontiers.jpg" alt="">
+              </a>
+            </li>
+            <li class="mix science">
+              <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4709560/" target="_blank">
+                <div class="overlay"><i class="fa fa-search"></i>
+                </div><img src="img/portfolio/small/frontiers.jpg" alt="">
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- portfolio ends -->
+  <!-- contact begins -->
+  <section id="page-contact" class="page-contact">
+    <div class="container">
+      <header class="section-header">
+        <h2 class="section-title"><span>Contact</span></h2>
+        <div class="spacer"></div>
+        <p class="section-subtitle"> </p>
+      </header>
+      <div class="row">
+        <div class="col-sm-5 contact-info">
+          <h3>Contact Info</h3>
+          <!-- <p><i class="fa fa-map-marker"></i> 6 Washington Place, Room 871, New York, NY 10003</p> -->
+          <p><i class="fa fa-phone"></i> (847) 831-0924</p>
+          <p><i class="fa fa-envelope-o"></i> apple@cogsci.jhu.edu</p>
+        </div>
+
+        <div class="col-sm-7">
+          <!-- <h3>Get in Touch</h3>-->
+          <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
+          <form class="form-horizontal" id="contactForm" action="http://formspree.io/aaron.roman.apple@gmail.com" method="POST">
+            <div class="control-group">
+              <label class="control-label" for="name">Name</label>
+              <div class="controls">
+                <input type="text" name="name" id="name" placeholder="Your name" class="form-control input-lg"  required data-validation-required-message="Please enter your name.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="email">Email Address</label>
+              <div class="controls">
+                <input type="email" name="_replyto" id="email" placeholder="Your email address" class="form-control input-lg"  required data-validation-required-message="Please enter your email address.">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <label class="control-label" for="message">Message</label>
+              <div class="controls">
+                <textarea name="body" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Please enter a message."></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div>
+              <button type="submit" class="btn btn-default btn-lg btn-block">Submit Message</button>
+            </div>
+          </form>
+
+          <!-- <form action="http://formspree.io/aaron.roman.apple@gmail.com"
+                method="POST">
+              <input type="text" name="name">
+              <input type="email" name="_replyto">
+              <input type="submit" value="Send">
+          </form>
+          <!-- End contact-form -->
+        </div>
+      </div>
+      <!-- End row -->
+      <p>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+    </div>
+
+
+  </section>
+  <!-- contact ends -->
+
+
+  <script src="js/jquery-2.1.3.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.scrollTo.js"></script>
+  <script src="js/jquery.nav.js"></script>
+  <script src="js/jquery.sticky.js"></script>
+  <script src="js/jquery.easypiechart.min.js"></script>
+  <script src="js/vegas.js"></script>
+  <script src="js/jquery.isotope.min.js"></script>
+  <script src="js/jquery.magnific-popup.min.js"></script>
+  <script src="js/waypoints.min.js"></script>
+  <script src="js/jqBootstrapValidation.js"></script>
+  <!-- <script src="js/contact_me.js"></script> -->
+  <script src="js/main.js"></script>
+  <script src="js/morphext.min.js"></script>
+  <script src="js/morphext.js"></script>
+  <!--<script src="jquery.js"></script>-->
+  <script src="js/typed.js"></script>
+
+  <script>
+  $(function(){
+    $(".element").typed({
+      strings: ["This is not a webpage.^1000", "Something unknown is doing we don't know what.^1000" ],
+      typeSpeed: 100,
+      loop: true,
+      backSpeed: 50,
+      startDelay: 1000,
+    });
+  });
+  </script>
+
+</body>
+
+</html>
