editing bio and education sections

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
   <!-- <script src="js/modernizr-2.6.2.min.js"></script> -->
 
   <!-- Fonts -->
-  <!-- <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'> -->
-
-<link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
   <link href='http://fonts.googleapis.com/css?family=Alice:400,700' rel='stylesheet' type='text/css'>
 
@@ -103,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">I'm a cognitive scientist with expertise in human development and language learning, looking to apply my analytical skills to improve education policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning, I'm looking to transition into the applied learing sciences and improve education outcomes by targeting the intersection of human development and education policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
@@ -111,7 +109,7 @@
           </div>
         </div>
         <div style="font-size:16px" class="col-md-9">
-          <p>I was born in a northern suburb of Chicago. A recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
+          <p>I grew up outside Chicago, my mom teaches art history and my dad is a programmer for an information storage company. I moved to the east coast for college, and as much as I love it out here, I do miss the windy city. I'm a recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
         </div>
       </div>
     </div>
@@ -130,7 +128,7 @@
               <h3>Johns Hopkins University</h3>
               <p><strong>M.A. in Cognitive Science</strong></p>
               <p>Graduated: July 2016</p>
-              <p>My graduate research focused on how language processing behaviors (such as reading, understanding, and producing language) are influenced by experience, over the course of a few milliseconds or over many years. Anything else fun to say?</p>
+              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years.</p>
             </center>
           </article>
           <p class="section-subtitle"></p>
@@ -139,7 +137,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I graduated with a bachelor's degree in Language and Mind.....</p>
+              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind, a joint major in the departments of Psychology and Linguistics.</p>
             </center>
           </article>
         </div>
@@ -260,7 +258,6 @@
       <!-- End row -->
       <p>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
     </div>
-
 
   </section>
   <!-- contact ends -->
