--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning, I'm looking to transition into the applied learing sciences and improve education outcomes by targeting the intersection of human development and education policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning, I'm looking to transition into the applied learing sciences. My goal is to improve learning outcomes by disseminating and applying findings from the developmental sciences to influence education policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div style="font-size:16px" class="col-md-9">
-          <p>I grew up outside Chicago, my mom teaches art history and my dad is a programmer for an information storage company. I moved to the east coast for college, and as much as I love it out here, I do miss the windy city. I'm a recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
+          <p>I grew up outside Chicago, my mom teaches art history and my dad is a programmer for an information storage company. I moved to the east coast for college, and as much as I love it out here, I miss the windy city. I'm a recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
         </div>
       </div>
     </div>
