--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <!-- <script src="js/modernizr-2.6.2.min.js"></script> -->
 
   <!-- Fonts -->
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
 
-  <link href='http://fonts.googleapis.com/css?family=Alice:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Alice:400,700' rel='stylesheet' type='text/css'>
 
 </head>
 
