fix reference error

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learing sciences. My goal is to improve learning outcomes by disseminating and applying findings from the developmental sciences to influence education policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learing sciences. My goal is to improve learning outcomes by applying findings from developmental science to education and social policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
