--- a/index.html
+++ b/index.html
@@ -256,7 +256,10 @@
         </div>
       </div>
       <!-- End row -->
+      <!-- <div class="spacer"></div>
+      <div style="font-size:10px" class="col-md-9">
       <p>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
+    </div> -->
     </div>
 
   </section>
