--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row">
         <header>
-          <h1>Some thoughts:</h1>
+          <h1>Aaron wants to talk to you about:</h1>
           <span style="font-size:80px" class="element"></span>
         </header>
         <div class="social-icons">
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learing sciences. My goal is to improve learning outcomes by applying findings from developmental science to education and social policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learing sciences. My goal is to solve problems at the intersection of developmental psychology and education policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
@@ -109,7 +109,12 @@
           </div>
         </div>
         <div style="font-size:16px" class="col-md-9">
-          <p>I grew up outside Chicago, my mom teaches art history and my dad is a programmer for an information storage company. I moved to the east coast for college, and as much as I love it out here, I miss the windy city. I'm a recent graduate of Johns Hopkins University's Department of Cognitive Science. </p>
+          <ul>
+            <li>I grew up outside Chicago, my mom teaches art history and my dad is a programmer and salesperson for an information storage company.<br><br></li>
+            <li>I moved to the east coast for college, and as much as I love it out here, I miss the windy city.<br><br></li>
+            <li>I'm a recent graduate of the Department of Cognitive Science at Johns Hopkins University.<br><br></li>
+            <li>In my free time I write and record music.</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -128,7 +133,7 @@
               <h3>Johns Hopkins University</h3>
               <p><strong>M.A. in Cognitive Science</strong></p>
               <p>Graduated: July 2016</p>
-              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years.</p>
+              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years. In particular, my work investigated adaptation effects in filler-gap processing, and childrens' processing of syntactic ambiguities.</p>
             </center>
           </article>
           <p class="section-subtitle"></p>
@@ -137,7 +142,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind, a joint major in the departments of Psychology and Linguistics.</p>
+              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind, a joint major in the departments of Linguistics and Psychology, and a minor in creative writing.</p>
             </center>
           </article>
         </div>
@@ -287,7 +292,7 @@
   <script>
   $(function(){
     $(".element").typed({
-      strings: ["This is not a webpage.^1000", "Something unknown is doing we don't know what.^1000" ],
+      strings: ["Language learning^1000", "Education policy^1000", "Statistics^1000", "Music^1000", "Cooking^1000", "Art theory^1000", "Cognitive science^1000", "Your favorite movies^1000", "Human development^1000"],
       typeSpeed: 100,
       loop: true,
       backSpeed: 50,
