--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <h3>Johns Hopkins University</h3>
               <p><strong>M.A. in Cognitive Science</strong></p>
               <p>Graduated: July 2016</p>
-              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years. In particular, my work investigated adaptation effects in filler-gap processing, and childrens' processing of syntactic ambiguities.</p>
+              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years. In particular, my work investigated adaptation effects in filler-gap processing and childrens' processing of syntactic ambiguities.</p>
             </center>
           </article>
           <p class="section-subtitle"></p>
@@ -142,7 +142,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind, a joint major in the departments of Linguistics and Psychology, and a minor in creative writing.</p>
+              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
             </center>
           </article>
         </div>
