--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
         </div>
         <div style="font-size:16px" class="col-md-9">
           <ul>
-            <li>I grew up outside Chicago, my mom teaches art history and my dad is a programmer and salesperson for an information storage company.<br><br></li>
-            <li>I moved to the east coast for college, and as much as I love it out here, I miss the windy city.<br><br></li>
-            <li>I'm a recent graduate of the Department of Cognitive Science at Johns Hopkins University.<br><br></li>
+            <li>I grew up outside Chicago, my mom teaches art history and my dad is a programmer and salesperson for an information storage company.</li>
+            <li>I'm a recent graduate of the Department of Cognitive Science at Johns Hopkins University.</li>
             <li>In my free time I write and record music.</li>
           </ul>
         </div>
@@ -205,6 +204,7 @@
     </div>
   </section>
   <!-- portfolio ends -->
+
   <!-- contact begins -->
   <section id="page-contact" class="page-contact">
     <div class="container">
@@ -214,62 +214,16 @@
         <p class="section-subtitle"> </p>
       </header>
       <div class="row">
-        <div class="col-sm-5 contact-info">
-          <h3>Contact Info</h3>
-          <!-- <p><i class="fa fa-map-marker"></i> 6 Washington Place, Room 871, New York, NY 10003</p> -->
+        <div class="col-sm-7 contact-info">
+          <!-- <h3>Contact Info</h3> -->
           <p><i class="fa fa-phone"></i> (847) 831-0924</p>
           <p><i class="fa fa-envelope-o"></i> apple@cogsci.jhu.edu</p>
-        </div>
-
-        <div class="col-sm-7">
-          <!-- <h3>Get in Touch</h3>-->
-          <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
-          <form class="form-horizontal" id="contactForm" action="http://formspree.io/aaron.roman.apple@gmail.com" method="POST">
-            <div class="control-group">
-              <label class="control-label" for="name">Name</label>
-              <div class="controls">
-                <input type="text" name="name" id="name" placeholder="Your name" class="form-control input-lg"  required data-validation-required-message="Please enter your name.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <label class="control-label" for="email">Email Address</label>
-              <div class="controls">
-                <input type="email" name="_replyto" id="email" placeholder="Your email address" class="form-control input-lg"  required data-validation-required-message="Please enter your email address.">
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div class="control-group">
-              <label class="control-label" for="message">Message</label>
-              <div class="controls">
-                <textarea name="body" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Please enter a message."></textarea>
-                <p class="help-block text-danger"></p>
-              </div>
-            </div>
-            <div>
-              <button type="submit" class="btn btn-default btn-lg btn-block">Submit Message</button>
-            </div>
-          </form>
-
-          <!-- <form action="http://formspree.io/aaron.roman.apple@gmail.com"
-                method="POST">
-              <input type="text" name="name">
-              <input type="email" name="_replyto">
-              <input type="submit" value="Send">
-          </form>
-          <!-- End contact-form -->
+          <p><i class="fa fa-map-marker"></i> 3400 North Charles Street, Krieger Hall room 237, Baltimore, MD 21218</p>
         </div>
       </div>
-      <!-- End row -->
-      <!-- <div class="spacer"></div>
-      <div style="font-size:10px" class="col-md-9">
-      <p>Icons made by <a href="http://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></p>
-    </div> -->
     </div>
-
   </section>
   <!-- contact ends -->
-
 
   <script src="js/jquery-2.1.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
