better portfolio thumbs

--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
             <li class="mix science">
               <a href="http://journal.frontiersin.org/article/10.3389/fpsyg.2015.00384/full" target="_blank">
                 <div class="overlay"><i class="fa fa-search"></i>
-                </div><img src="img/portfolio/small/frontiers.jpg" alt="">
+                </div><img src="img/portfolio/small/frontiers.png" alt="">
               </a>
             </li>
             <li class="mix science">
               <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4709560/" target="_blank">
                 <div class="overlay"><i class="fa fa-search"></i>
-                </div><img src="img/portfolio/small/frontiers.jpg" alt="">
+                </div><img src="img/portfolio/small/frontiers.png" alt="">
               </a>
             </li>
 
