--- a/index.html
+++ b/index.html
@@ -216,9 +216,10 @@
       <div class="row">
         <div class="col-sm-7 contact-info">
           <!-- <h3>Contact Info</h3> -->
-          <p><i class="fa fa-phone"></i>(847) 970-0924</p>
-          <p><i class="fa fa-envelope-o"></i>apple@cogsci.jhu.edu</p>
-          <p><i class="fa fa-map-marker"></i>3400 North Charles Street, Krieger Hall room 237, Baltimore, MD 21218</p>
+          <p><i class="fa fa-phone"></i> &ensp; (847) 970-0924</p>
+          <p><i class="fa fa-envelope-o"></i> &ensp; apple@cogsci.jhu.edu</p>
+          <p><i class="fa fa-map-marker"></i> &ensp; 3400 North Charles Street, Krieger Hall room 237, Baltimore, MD 21218</p>
+
         </div>
       </div>
     </div>
