update bio and typer

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             <li>I grew up outside Chicago, my mom teaches art history and my dad is a programmer and salesperson for an information storage company.</li>
             <li>I'm a recent graduate of the Department of Cognitive Science at Johns Hopkins University.</li>
             <li>In my free time I write and record music.</li>
+
           </ul>
         </div>
       </div>
@@ -141,7 +142,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I started out expecting to study comparative literature and explore my interest in archetype realization across the folklores of different cultures, but I ended up with a bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
+              <p>I started out studying comparative literature and the folklores of different cultures, and this led me to the study of human language and learning. I recieved a bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
             </center>
           </article>
         </div>
@@ -246,7 +247,7 @@
   <script>
   $(function(){
     $(".element").typed({
-      strings: ["Language learning^1000", "Education policy^1000", "Statistics^1000", "Music^1000", "Cooking^1000", "Art theory^1000", "Cognitive science^1000", "Your favorite movies^1000", "Human development^1000"],
+      strings: ["Language learning^1000", "Education policy^1000", "Statistics^1000", "Music^1000", "International development^1000", "Cooking^1000", "Art theory^1000", "Cognitive science^1000", "Your favorite movies^1000", "Human development^1000"],
       typeSpeed: 100,
       loop: true,
       backSpeed: 50,
