--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learing sciences. My goal is to solve problems at the intersection of developmental psychology and education policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learning sciences. My goal is to solve problems at the intersection of developmental psychology and education policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
