--- a/index.html
+++ b/index.html
@@ -109,12 +109,7 @@
           </div>
         </div>
         <div style="font-size:16px" class="col-md-9">
-          <ul>
-            <li>I grew up outside Chicago, my mom teaches art history and my dad is a programmer and salesperson for an information storage company.</li>
-            <li>I'm a recent graduate of the Department of Cognitive Science at Johns Hopkins University.</li>
-            <li>In my free time I write and record music.</li>
-
-          </ul>
+          <!-- personal deets? -->
         </div>
       </div>
     </div>
