--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied learning sciences. My goal is to solve problems at the intersection of developmental psychology and education policy.</p>
+        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied social sciences. My goal is to solve problems at the intersection of developmental psychology and public policy.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
@@ -137,7 +137,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I started out studying comparative literature and the folklores of different cultures, and this led me to the study of human language and learning. I recieved a bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
+              <p>I started out studying comparative literature and the folklores of different cultures, and this led me to the study of human language and learning. I recieved a Bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
             </center>
           </article>
         </div>
@@ -210,7 +210,7 @@
         <p class="section-subtitle"> </p>
       </header>
       <div class="row">
-        <div class="col-sm-7 contact-info">
+        <div class="col-sm-9 contact-info">
           <!-- <h3>Contact Info</h3> -->
           <p><i class="fa fa-phone"></i> &ensp; (847) 970-0924</p>
           <p><i class="fa fa-envelope-o"></i> &ensp; apple@cogsci.jhu.edu</p>
