--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
   <script>
   $(function(){
     $(".element").typed({
-      strings: ["Language learning^1000", "Education policy^1000", "Statistics^1000", "Music^1000", "International development^1000", "Cooking^1000", "Art theory^1000", "Cognitive science^1000", "Your favorite movies^1000", "Human development^1000"],
+      strings: ["Language learning^1000", "Education policy^1000", "Statistics^1000", "Music^1000", "Global development^1000", "Cooking^1000", "Art theory^1000", "Cognitive science^1000", "Your favorite movies^1000", "Human development^1000"],
       typeSpeed: 100,
       loop: true,
       backSpeed: 50,
