major updates to content sections

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Trained as a cognitive scientist, with expertise in language learning and human development, I'm looking to transition into the applied social sciences. My goal is to solve problems at the intersection of developmental psychology and public policy.</p>
+        <p class="section-subtitle">A recent graduate of the Department of Cognitive Science at Johns Hopkins University, where I studied language processing and human development. I'm looking to transition into the applied social sciences to a position in which I can leverage my diverse research managment skills, my experience in quantitative and graphical data analysis, and my enthusiasm for solving complex problems in the service of the community.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
@@ -128,7 +128,7 @@
               <h3>Johns Hopkins University</h3>
               <p><strong>M.A. in Cognitive Science</strong></p>
               <p>Graduated: July 2016</p>
-              <p>My graduate research focused on how language processing behaviors such as reading, understanding, and producing language are influenced by linguistic experience, over the course of a few milliseconds or over many years. In particular, my work investigated adaptation effects in filler-gap processing and childrens' processing of syntactic ambiguities.</p>
+              <p>My graduate research focused on language processing and language learning, investigating how experience and executive control effects linguistic behaviors such as reading, understanding, and producing language, on timespans of a few milliseconds to timespans of many years. My work primarily utilized eye tracking to investigate adaptation effects in filler-gap processing and childrens' processing of syntactic ambiguities.</p>
             </center>
           </article>
           <p class="section-subtitle"></p>
@@ -137,7 +137,7 @@
               <h3>New York University</h3>
               <p><strong>B.A. in Language and Mind</strong></p>
               <p>Graduated: December 2012</p>
-              <p>I started out studying comparative literature and the folklores of different cultures, and this led me to the study of human language and learning. I recieved a Bachelor's degree in Language and Mind (a joint major in the departments of Linguistics and Psychology) and a minor in creative writing.</p>
+              <p>My early interests in comparative literature and the folklores of different cultures led me to the study of human language and the science of learning, and to pursue a Bachelor's degree in Language and Mind, a joint major in the departments of Linguistics and Psychology, and a minor in creative writing.</p>
             </center>
           </article>
         </div>
