--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <header class="section-header">
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">A recent graduate of the Department of Cognitive Science at Johns Hopkins University, where I studied language processing and human development. I'm looking to transition into the applied social sciences to a position in which I can leverage my diverse research managment skills, my experience in quantitative and graphical data analysis, and my enthusiasm for solving complex problems in the service of the community.</p>
+        <p class="section-subtitle">Recent graduate of the Department of Cognitive Science at Johns Hopkins University, where I studied language processing and human development. I'm looking to transition into the applied social sciences, to a position in which I can leverage my diverse research managment skills, my expertise in quantitative and graphical data analysis, and my enthusiasm for solving complex problems in the service of the community.</p>
       </header>
       <div class="row">
         <div class="col-md-3">
