fixed bio picture

--- a/index.html
+++ b/index.html
@@ -102,16 +102,17 @@
         <h2 class="section-title">Hello</h2>
         <div class="spacer"></div>
         <p class="section-subtitle">Recent graduate of the Department of Cognitive Science at Johns Hopkins University, where I studied language processing and human development. I'm looking to transition into the applied social sciences, to a position in which I can leverage my diverse research managment skills, my expertise in quantitative and graphical data analysis, and my enthusiasm for solving complex problems in the service of the community.</p>
+        <img src="img/profile.jpg" alt="profile" style="width:25%; height:auto" />
       </header>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-3">
           <div class="profile"><img src="img/profile.jpg" alt="profile" />
           </div>
         </div>
         <div style="font-size:16px" class="col-md-9">
           <!-- personal deets? -->
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> --> -->
     </div>
   </section>
   <!-- profile ends -->
