--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </header>
         <div class="social-icons">
           <a href="img/apple_CV.pdf" class="btn btn-round btn-clear btn-google" id="resumeBtn"><i class="fa fa fa-file-text-o"></i></a>
-          <a href="https://www.linkedin.com/in/aaron-apple-08814925" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
+          <a href="https://www.linkedin.com/in/aaronapple" target="_blank" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
           <a href="https://www.facebook.com/aaron.apple1" target="_blank" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
           <!-- <a href="https://github.com/aaronapple/" target="_blank" class="btn btn-round btn-clear btn-github"><i class="fa fa-github"></i></a> -->
         </div>
